--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "botkit",
+  "name": "mangrove-botkit",
   "version": "0.5.7",
   "description": "Building blocks for Building Bots",
   "main": "lib/Botkit.js",
@@ -42,10 +42,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/howdyai/botkit.git"
+    "url": "https://github.com/MeetMangrove/botkit.git"
   },
   "bugs": {
-    "url": "https://github.com/howdyai/botkit/issues"
+    "url": "https://github.com/MeetMangrove/botkit/issues"
   },
   "homepage": "http://howdy.ai/botkit",
   "keywords": [
